// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionsPicker /> renders the ExtensionsPicker correctly 1`] = `
<DocumentFragment>
  <div
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="pf-c-form__group"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
        <input
          aria-invalid="false"
          aria-label="Search extensions"
          class="pf-c-form-control search-extensions-input"
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        class="selected-extensions"
      >
        <h4>
          Selected Extensions
        </h4>
        <div
          class="extension-list"
        />
      </div>
    </div>
    <div
      class="list-container"
    >
      <div
        style="display: contents;"
      >
        <div
          class="extension-category"
        >
          Integration
        </div>
        <div
          aria-label="Switch io.quarkus:quarkus-camel-netty4-http extension"
          class="  extension-item"
        >
          <div
            class="extension-selector"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                transform=""
              />
            </svg>
          </div>
          <div
            class="extension-name"
            tabindex="0"
          >
            Camel Netty4 test HTTP
          </div>
          <div
            class="extension-details"
          >
            <div
              class="extension-description"
              tabindex="0"
            >
              Camel support for Netty
            </div>
            <div
              class="extension-gav"
              tabindex="0"
            >
              <div>
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                    transform=""
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: contents;"
      >
        <div
          class="extension-category"
        >
          Core
        </div>
        <div
          aria-label="Switch io.quarkus:quarkus-arc extension"
          class="  extension-item"
        >
          <div
            class="extension-selector"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                transform=""
              />
            </svg>
          </div>
          <div
            class="extension-name"
            tabindex="0"
          >
            ArC
          </div>
          <div
            class="extension-details"
          >
            <div
              class="extension-description"
              tabindex="0"
            >
              Build time CDI dependency injection
            </div>
            <div
              class="extension-gav"
              tabindex="0"
            >
              <div>
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                    transform=""
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: contents;"
      >
        <div
          class="extension-category"
        >
          Cloud
        </div>
        <div
          aria-label="Switch some-id extension"
          class="  extension-item"
        >
          <div
            class="extension-selector"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                transform=""
              />
            </svg>
          </div>
          <div
            class="extension-name"
            tabindex="0"
          >
            A CDI in name test
          </div>
          <div
            class="extension-details"
          >
            <div
              class="extension-description"
              tabindex="0"
            >
              Some description
            </div>
            <div
              class="extension-gav"
              tabindex="0"
            >
              <div>
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                    transform=""
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ExtensionsPicker /> select values and save 1`] = `
<DocumentFragment>
  <div
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="pf-c-form__group"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
        <input
          aria-invalid="false"
          aria-label="Search extensions"
          class="pf-c-form-control search-extensions-input"
          placeholder=""
          type="text"
          value="netty"
        />
      </div>
      <div
        class="selected-extensions"
      >
        <h4>
          Selected Extensions
        </h4>
        <div
          class="extension-list"
        />
      </div>
    </div>
    <div
      class="list-container"
    >
      <div
        class="extension-search-clear"
      >
        Search results (
        <button
          class="pf-c-button pf-m-link"
          type="button"
        >
          Clear search
        </button>
        )
      </div>
      <div
        aria-label="Switch io.quarkus:quarkus-camel-netty4-http extension"
        class="  extension-item"
      >
        <div
          class="extension-selector"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              transform=""
            />
          </svg>
        </div>
        <div
          class="extension-name"
          tabindex="0"
        >
          Camel Netty4 test HTTP
        </div>
        <div
          class="extension-details"
        >
          <div
            class="extension-description"
            tabindex="0"
          >
            Camel support for Netty
          </div>
          <div
            class="extension-gav"
            tabindex="0"
          >
            <div>
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 384 512"
                width="1em"
              >
                <path
                  d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                  transform=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ExtensionsPicker /> show results for valid search 1`] = `
<DocumentFragment>
  <div
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="pf-c-form__group"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
        <input
          aria-invalid="false"
          aria-label="Search extensions"
          class="pf-c-form-control search-extensions-input"
          placeholder=""
          type="text"
          value="CDI"
        />
      </div>
      <div
        class="selected-extensions"
      >
        <h4>
          Selected Extensions
        </h4>
        <div
          class="extension-list"
        />
      </div>
    </div>
    <div
      class="list-container"
    >
      <div
        class="extension-search-clear"
      >
        Search results (
        <button
          class="pf-c-button pf-m-link"
          type="button"
        >
          Clear search
        </button>
        )
      </div>
      <div
        aria-label="Switch io.quarkus:quarkus-arc extension"
        class="  extension-item"
      >
        <div
          class="extension-selector"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              transform=""
            />
          </svg>
        </div>
        <div
          class="extension-name"
          tabindex="0"
        >
          ArC
        </div>
        <div
          class="extension-details"
        >
          <div
            class="extension-description"
            tabindex="0"
          >
            Build time CDI dependency injection
          </div>
          <div
            class="extension-gav"
            tabindex="0"
          >
            <div>
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 384 512"
                width="1em"
              >
                <path
                  d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                  transform=""
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
